--- a/w2hw/hw3_responsive weblayout.html
+++ b/w2hw/hw3_responsive weblayout.html
@@ -27,7 +27,7 @@
             background-color:aqua;
             align-items:flex-start;
             width:100%;
-            position: fixed;
+            /* position: fixed; */
             top:0px;
             font-family: Verdana, Geneva, Tahoma, sans-serif;
             color:white;
@@ -49,7 +49,7 @@
             width:20vw;
 
             padding:10px;
-            padding-top: 70px;
+            /* padding-top: 70px; */
             align-content: flex-start;
             font-size: 11px;
 
@@ -61,13 +61,13 @@
 
             padding:10px;
             align-content: flex-end;
-            padding-top: 70px;
+            /* padding-top: 70px; */
             font-size: 11px;
         }
         .centermain{
             font-size: 12px;
             padding: 10px;
-            padding-top: 70px;
+            /* padding-top: 70px; */
             width:100%;
 
             padding-top: 80px;
