--- a/w2hw/flexbox.html
+++ b/w2hw/flexbox.html
@@ -56,12 +56,20 @@
 
     .black{
         background-color:black;
-        
+
 
     }
 
     .white{
         background-color:white;
+
+    }
+    img{
+        max-width: 100%;
+        max-height: 80%;
+        position: relative;
+        top:10%;
+        left:25%
 
     }
     </style>
@@ -71,8 +79,8 @@
 
         <div class="mainbox">
             <div class="innerbox_4">
-                <div class="elementbox black"></div>
-                <div class="elementbox white"></div>
+                <div class="elementbox black"><img src="http://pngimg.com/uploads/chess/chess_PNG8459.png" alt=""></div>
+                <div class="elementbox white"><img src="http://pngimg.com/uploads/chess/chess_PNG8458.png" alt=""></div>
                 <div class="elementbox white"></div>
                 <div class="elementbox black"></div>
             </div>
